--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,11 @@
 
     <div class="container">
         <h1>Welcome to Hiking Range</h1>
-        <p>Explore the best hiking ranges near you. Discover trails, plan your next adventure, and connect with nature.</p>
+        <p>Explore the best hiking ranges near you. Discover trails, plan your next adventure, and connect with nature lovers.</p>
         <a href="/all">View All Hiking Ranges</a>
     </div>
         
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
+<!-- chatGPT link: https://chatgpt.com/share/67a013fd-7158-8011-8133-ec99687b30bd -->
